syntax = "proto3";

package engine;

message Lookup {
    int64 id = 1;
    string name = 2;
}

message ListRequest {
    int64 domain_id = 1;
    int32 size = 2;
    int32 page = 3;
}

message ItemRequest {
    int64 domain_id = 1;
    int64 id = 2;
}

message Response {
    string status = 1;
}